Changed website header

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -12,8 +12,8 @@
   <meta content="en_EN" property="og:locale">
   <meta content="website" property="og:type">
   <meta content="https://shikun.io/projects/clarity" property="og:url">
-  <meta content="Clarity" property="og:title">
-  <meta content="Website Template for AI Research" property="og:description">
+  <meta content="Machine Learning the Unspoken" property="og:title">
+  <meta content="Acoustic Feature Analysis for Classifying Intent in Nonverbal Vocalizations" property="og:description">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@your_twitter_id">
