--- a/checkpoint3/website/clarity_elements.html
+++ b/checkpoint3/website/clarity_elements.html
@@ -10,8 +10,8 @@
     <meta content="en_EN" property="og:locale">
     <meta content="website" property="og:type">
     <meta content="https://shikun.io/projects/clarity" property="og:url">
-    <meta content="Clarity" property="og:title">
-    <meta content="Website Template for AI Research" property="og:description">
+    <meta content="ML the Unspoken" property="og:title">
+    <meta content="CMSC320 Final Project" property="og:description">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@your_twitter_id">
