fixed tab title

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clarity: A Minimalist Website Template for AI Research</title>
+  <title>ML the Unspoken: CMSC320 Final Project</title>
   <meta name="description"
     content="We've presented Clarity, a minimalist and elegant website template for AI research.">
   <meta name="referrer" content="no-referrer-when-downgrade">
