added tutorial section to website

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -199,28 +199,25 @@
       </div>
       <div class="slider">
         <div class="slider-item">
-          <img src="clarity/images/participant_barplots/participant_P01.png" alt="P01 Label Distribution"></i>
+          <img src="clarity/images/Website Tutorial/TOC.png"></img>
         </div>
         <div class="slider-item">
-          <img src="clarity/images/participant_barplots/participant_P02.png" alt="P02 Label Distribution"></img>
+          <img src="clarity/images/Website Tutorial/2dZoom.gif"></img>
         </div>
         <div class="slider-item">
-          <img src="clarity/images/participant_barplots/participant_P03.png" alt="P03 Label Distribution"></img>
+          <img src="clarity/images/Website Tutorial/3dPlot.gif"></img>
         </div>
         <div class="slider-item">
-          <img src="clarity/images/participant_barplots/participant_P05.png" alt="P05 Label Distribution"></img>
+          <img src="clarity/images/Website Tutorial/Buttons.gif"></img>
         </div>
         <div class="slider-item">
-          <img src="clarity/images/participant_barplots/participant_P06.png" alt="P06 Label Distribution"></img>
+          <img src="clarity/images/Website Tutorial/Arrows.gif"></img>
         </div>
         <div class="slider-item">
-          <img src="clarity/images/participant_barplots/participant_P08.png" alt="P08 Label Distribution"></img>
+          <img src="clarity/images/Website Tutorial/Code.gif"></img>
         </div>
         <div class="slider-item">
-          <img src="clarity/images/participant_barplots/participant_P11.png" alt="P11 Label Distribution"></img>
-        </div>
-        <div class="slider-item">
-          <img src="clarity/images/participant_barplots/participant_P16.png" alt="P16 Label Distribution"></img>
+          <img src="clarity/images/Website Tutorial/Hover.gif"></img>
         </div>
       </div>
     </div>
