updated gifs to videos

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -202,22 +202,22 @@
           <img src="clarity/images/Website Tutorial/TOC.png"></img>
         </div>
         <div class="slider-item">
-          <img src="clarity/images/Website Tutorial/2dZoom.gif"></img>
+          <video loop playsinline muted autoplay src="clarity/images/Website Tutorial/2dZoom.mp4"></video>
         </div>
         <div class="slider-item">
-          <img src="clarity/images/Website Tutorial/3dPlot.gif"></img>
+          <video loop playsinline muted autoplay src="clarity/images/Website Tutorial/3dPlot.mp4"></video>
         </div>
         <div class="slider-item">
-          <img src="clarity/images/Website Tutorial/Buttons.gif"></img>
+          <video loop playsinline muted autoplay src="clarity/images/Website Tutorial/Buttons.mp4"></video>
         </div>
         <div class="slider-item">
-          <img src="clarity/images/Website Tutorial/Arrows.gif"></img>
+          <video loop playsinline muted autoplay src="clarity/images/Website Tutorial/Arrows.mp4"></video>
         </div>
         <div class="slider-item">
-          <img src="clarity/images/Website Tutorial/Code.gif"></img>
+          <video loop playsinline muted autoplay src="clarity/images/Website Tutorial/Code.mp4"></video>
         </div>
         <div class="slider-item">
-          <img src="clarity/images/Website Tutorial/Hover.gif"></img>
+          <video loop playsinline muted autoplay src="clarity/images/Website Tutorial/Hover.mp4"></video>
         </div>
       </div>
     </div>
