added linkedin links

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -194,9 +194,7 @@
   </h1>
   <ol style="padding: 2em; display: flex; flex-direction: column; gap: 1em;">
     <li>        
-      <p class="text"><a href=""><i class="fa-brands fa-linkedin fa-2xl"></i><a href=""></a> <a href="" class="button icon"
-        style="background-color: rgba(170, 157, 157, 0.25); margin-bottom: 0;">LinkedIn<i
-          class="fa-solid fa-code"></i></a><span style="font-weight: bold"> Vishesh Narayan</span>: Helped conceive and define the project
+      <p class="text"><a href="https://www.linkedin.com/in/visheshng/"><i class="fa-brands fa-linkedin fa-2xl"></i><a href=""></a> <span style="font-weight: bold"> Vishesh Narayan</span>: Helped conceive and define the project
         scope and objective (A). He developed the data preprocessing pipeline and extracted key audio features (B),
         conducted exploratory data analysis and visualizations (C), and contributed to the design and implementation
         of ML models including CNN, classical classifiers, and Attention-based models (D). Vishesh also ran training
@@ -204,34 +202,26 @@
         heavily to writing and formatting the final tutorial report (G).</p>
     </li>
     <li>
-      <p class="text"><a href=""><i class="fa-brands fa-linkedin fa-2xl"></i><a href=""></a> <a href="" class="button icon"
-        style="background-color: rgba(170, 157, 157, 0.25); margin-bottom: 0;">LinkedIn<i
-          class="fa-solid fa-code"></i></a><span style="font-weight: bold"> Shivam Amin</span>: Improved dataset loading by building
+      <p class="text"><a href="https://www.linkedin.com/in/shivamamin05/"><i class="fa-brands fa-linkedin fa-2xl"></i><a href=""></a> <span style="font-weight: bold"> Shivam Amin</span>: Improved dataset loading by building
         parallel processing functions for faster and more efficient data handling along with waveform cleaning,
         spectrogram generation, and acoustic feature extraction (B). He contributed to exploratory data analysis and
         interpretation (C), helped design and implement ML models (D), participated in interpreting visualizations and
         results (F), and helped write and polish the final tutorial (G).</p>
     </li>
     <li>
-      <p class="text"><a href=""><i class="fa-brands fa-linkedin fa-2xl"></i><a href=""></a> <a href="" class="button icon"
-        style="background-color: rgba(170, 157, 157, 0.25); margin-bottom: 0;">LinkedIn<i
-          class="fa-solid fa-code"></i></a><span style="font-weight: bold"> Deval Bansal</span>: Contributed to EDA through feature summary
+      <p class="text"><a href="https://www.linkedin.com/in/devalbansal/"><i class="fa-brands fa-linkedin fa-2xl"></i><a href=""></a> <span style="font-weight: bold"> Deval Bansal</span>: Contributed to EDA through feature summary
         statistics and comparative plots (C), helped build classification models and optimize hyperparameters using
         the elbow method (D), ran training and testing procedures on classical (E), created supporting visualizations
         and analysis summaries (F), and co-authored the final report (G).</p>
     </li>
     <li>
-      <p class="text"><a href=""><i class="fa-brands fa-linkedin fa-2xl"></i><a href=""></a> <a href="" class="button icon"
-        style="background-color: rgba(170, 157, 157, 0.25); margin-bottom: 0;">LinkedIn<i
-          class="fa-solid fa-code"></i></a><span style="font-weight: bold"> Eric Yao</span>: Assisted in audio feature extraction and
+      <p class="text"><a href="https://www.linkedin.com/in/eyao0815/"><i class="fa-brands fa-linkedin fa-2xl"></i><a href=""></a> <span style="font-weight: bold"> Eric Yao</span>: Assisted in audio feature extraction and
         comparative analysis of spectral signatures (C), developed deep learning models including CNN variants and
         preprocessing logic (D), supported model training and hyperparameter tuning (E), helped interpret results and
         plot visual comparisons (F), and contributed to the overall report structure and clarity (G).</p>
     </li>
     <li>
-      <p class="text"><a href=""><i class="fa-brands fa-linkedin fa-2xl"></i><a href=""></a> <a href="" class="button icon"
-        style="background-color: rgba(170, 157, 157, 0.25); margin-bottom: 0;">LinkedIn<i
-          class="fa-solid fa-code"></i></a><span style="font-weight: bold"> Eshan Khan</span>: Analyzed MFCC and pitch statistics across
+      <p class="text"><a href="https://www.linkedin.com/in/eshankhan05/"><i class="fa-brands fa-linkedin fa-2xl"></i><a href=""></a> <span style="font-weight: bold"> Eshan Khan</span>: Analyzed MFCC and pitch statistics across
         label groups and visualized feature correlations (C), contributed to classifier experimentation and CNN
         architecture selection (D), supported training runs and validation of model outputs (E), assisted in
         visualizing trends and summarizing results (F), and contributed to writing key sections of the final tutorial
