changed TOC tutorial from png to mp4

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -269,7 +269,7 @@
       </div>
       <div class="slider">
         <div class="slider-item">
-          <img src="clarity/images/Website Tutorial/TOC.png"></img>
+          <video loop playsinline muted autoplay src="clarity/images/Website Tutorial/TOC-Vid.mp4"></video>
         </div>
         <div class="slider-item">
           <video loop playsinline muted autoplay src="clarity/images/Website Tutorial/2dZoom.mp4"></video>
