added animation to 🥀

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -332,7 +332,7 @@
     file that included labels, participant IDs, and file indices. All of this information was organized into a
     structured <code>polars</code> DataFrame. Because audio loading is computationally intensive and initially caused
     RAM issues, Shivam implemented a multi-threaded approach to parallelize the loading process. This optimization
-    significantly reduced loading times and improved memory efficiency (and so our kernel stopped crashing 🥀).
+    significantly reduced loading times and improved memory efficiency (and so our kernel stopped crashing <span class="animation">🥀</span>).
   </p>
 </div>
 
